Fix order logic

--- a/src/templates/landing_2/home.html
+++ b/src/templates/landing_2/home.html
@@ -255,7 +255,9 @@
                     <div class="b4ContntInfo f aic jcsb fdc-768">
                         <div class="b4ItemInfoLeft">
                             <p class="message">Business Agility</p>
-                            <p class="nameEvent">Bienvenida al Evento Bienvenida al Evento Bienvenida al Evento Bienvenida al Evento Bienvenida al Evento</p>
+                            {% comment %}
+                                <p class="nameEvent">Bienvenida al Evento Bienvenida al Evento Bienvenida al Evento Bienvenida al Evento Bienvenida al Evento</p>
+                            {% endcomment %}
                             <div class="gParrafo">
                                 <p>{{schedule.description}}</p>
                             </div>
@@ -288,48 +290,6 @@
                 </div>
             </div>
             {% endfor %}
-            <div class="b4ItemList">
-                <div class="b4ItemCLick f aic jcsb arrowClick fdc-1024">
-                    <div class="b4ItemListLeft f aic jcfs fdc-480">
-                        <div class="live g">
-                            <p class="date f aic jcfs">12 de diciembre</p>
-                            <!-- CONDICIONAR SOLO UNO DE LOS BOTONES, REPRODUCIR O AGENDAR -->
-                            <a href="#" class="reproducir">Reproducir <i class="icon-play"></i></a>
-                            <!-- <a href="#" class="agendar">Agendar </a> -->
-                        </div>
-                        <p class="name">Bienvenida al Evento</p>
-                    </div>
-                    <div class="b4ItemListRight column2 column1-480">
-                        <p class="hour">08:30 - 09:00 PM</p>
-                        <p class="theme">Ciberseguridad y Liderazgo</p>
-                    </div>
-                </div>
-                <div class="b4ItemInfo">
-                    <div class="b4ContntInfo f aic jcsb fdc-768">
-                        <div class="b4ItemInfoLeft">
-                            <p class="message">Business Agility</p>
-                            <p class="nameEvent">Bienvenida al Evento Bienvenida al Evento Bienvenida al Evento Bienvenida al Evento Bienvenida al Evento</p>
-                            <div class="gParrafo">
-                                <p> Líderes en agilidad abordarán desafíos como la resistencia al cambio y la necesidad de adaptabilidad, ofreciendo estrategias exitosas.</p>
-                            </div>
-                        </div>
-                        <div class="b4ItemInfoRight">
-                            <div class="b4Expos g">
-                                <a href="#" class="f aic jcfs b25OpenPopupPerson"
-                                data-name="Rosa Bueno"
-                                data-cargo="Presidenta / Camara de Comercio de Lima"
-                                data-info="<p>Abogada egresada de la Pontificia Universalidad Católica del Perú (PUCP), experta en Competencia, Compliance y Arbitraje. Además, es socia fundadora del estudio de abogados Bueno Lercari Consultores.Abogada egresada de la Pontificia Universalidad Católica del Perú (PUCP), experta en Competencia, Compliance y Arbitraje. Además, es socia fundadora del estudio de abogados Bueno Lercari Consultores.</p>"
-                                data-url="www.google.com.pe"
-                                data-bandera="static/web_2/img/credicorp/expositor-pais.svg"
-                                data-img="static/web_2/img/credicorp/imgericka1.png">
-                                    <img src="static/web_2/img/credicorp/pais.svg" alt="">
-                                    <p class="">Cecilia Talaviña <samp>|</samp> Mi Banco</p>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
         </div>
     </div>
 </section>
