Add fields to filters

--- a/src/templates/landing_2/home.html
+++ b/src/templates/landing_2/home.html
@@ -241,7 +241,7 @@
                         <div class="live g">
                             <p class="date f aic jcfs">{{schedule.get_date}}</p>
                             <!-- CONDICIONAR SOLO UNO DE LOS BOTONES, REPRODUCIR O AGENDAR -->
-                            <a href="#" class="reproducir">Reproducir <i class="icon-play"></i></a>
+                            {% comment %} <a href="#" class="reproducir">Reproducir <i class="icon-play"></i></a> {% endcomment %}
                             <!-- <a href="#" class="agendar">Agendar </a> -->
                         </div>
                         <p class="name">{{schedule.name}}</p>
