--- a/src/templates/landing_2/common/_header.html
+++ b/src/templates/landing_2/common/_header.html
@@ -82,7 +82,7 @@
                 </div>
             </div>
             {% if not header %}
-            <a href="{% url 'landing:home' %}" class="returnChat">Regresar</a>
+            <a href="javascript:history.back()" class="returnChat">Regresar</a>
             {% endif %}
         </div>
     </div>
